--- a/client/src/App.css
+++ b/client/src/App.css
@@ -82,9 +82,13 @@ p{
   font-weight: 700;
   text-align: left
 }
-
-.card {
+.card{
   margin-bottom: 2rem;
+  border: none
+}
+
+.cards {
+
   box-shadow: 0px 3px 10px rgba(0,0,0,0.2);
 }
 .lds-heart {
@@ -150,6 +154,12 @@ button{
   /* color: white; */
   border-bottom: 1px solid rgb(161, 161, 161)
 }
+.nav-link{
+  padding: 0;
+  padding-bottom: 5px;
+  font-size: 14px;
+  cursor: pointer;
+}
 
 .lds-ellipsis {
   display: inline-block;
@@ -211,4 +221,16 @@ button{
 }
 .show{
   display: inline;
+}
+.card-link{
+  font-size: 10px;
+  color: lightgrey;
+
+  text-decoration: none
+}
+form{
+  font-family: 'Lekton', sans-serif;
+}
+#body{
+  height: 30vh;
 }
