Added Markdown Support

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -65,20 +65,20 @@ mark{
   background: black;
 }
 h3{
-  font-family: 'Vollkorn', serif;
+  font-family: 'Eczar', serif;
   text-align: left;
   margin-left: 15px;
   padding-top: 5px;
 }
 p{
-  font-family: 'Vollkorn', serif;
+  font-family: 'Eczar', serif;
   text-align: left;
   margin-left: 15px;
   padding-top: 5px;
   white-space: pre-line;
 }
 .card-title{
-  font-family: 'Vollkorn', serif;
+  font-family: 'Eczar', serif;
   font-weight: 700;
   text-align: left
 }
@@ -147,7 +147,7 @@ p{
 }
 button{
   background: #fefefe;
-  font-family: 'Vollkorn', serif;
+  font-family: 'Eczar', serif;
 }
 .navbar{
   /* background: #999999; */
@@ -239,7 +239,7 @@ form{
   height: 30vh;
 }
 h1, h2, h3, h4, h5{
-  font-family: 'Vollkorn', serif;
+  font-family: 'Eczar', serif;
 }
 .navbar-toggler{
   border: none
@@ -252,7 +252,7 @@ h1, h2, h3, h4, h5{
   margin-left: 0.5em
 }
 .bott{
-  font-family: 'Vollkorn', serif;
+  font-family: 'Eczar', serif;
   font-size: 14px;
   color: lightgray;
   border-top: 1px solid lightgray;
@@ -280,9 +280,22 @@ h1, h2, h3, h4, h5{
   color: white !important;
 }
 ul li {
-  font-family: 'Vollkorn', serif;
+  font-family: 'Eczar', serif;
   text-align: left;
 }
 .btn{
-  font-family: 'Vollkorn', serif;
+  font-family: 'Eczar', serif;
+}
+
+.overide{
+  font-family: 'Eczar', serif;
+  text-align: left;
+  margin-left: 15px;
+  padding-top: 5px;
+  white-space: pre-line;
+  font-size: 1rem;
+}
+
+strong{
+  font-weight: 700
 }
